TM: Modified the notebook() but there seems to be a problem in the first test.

--- a/TP1_Aguilar Lussier_Roberge_McAdams.ipynb
+++ b/TP1_Aguilar Lussier_Roberge_McAdams.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -96,6 +96,19 @@
     "    \n",
     "    def __hash__(self):\n",
     "        return int(self.x*1+self.y*2)\n",
+    "    \n",
+    "    \n",
+    "def change_position(snail_position, d):\n",
+    "    if d == 1:\n",
+    "        snail_position.x -= 1\n",
+    "    elif d == 2:\n",
+    "        snail_position.y += 1\n",
+    "    elif d == 3:\n",
+    "        snail_position.x += 1\n",
+    "    elif d == 4:\n",
+    "        snail_position.y -= 1\n",
+    "\n",
+    "    return snail_position\n",
     "\n",
     "class State:\n",
     "    \n",
@@ -125,7 +138,22 @@
     "    \"\"\"\n",
     "    def move(self, d):\n",
     "        # TODO\n",
-    "        return None\n",
+    "        newState = self\n",
+    "        newState.prev = copy.deepcopy(self)\n",
+    "        newState.d = d\n",
+    "\n",
+    "        for i in range(len(d)):\n",
+    "\n",
+    "            pos_snail = self.pos[i]\n",
+    "            d_snail = d[i]\n",
+    "\n",
+    "            if d_snail != 0:\n",
+    "                temp_pos = (pos_snail.x, pos_snail.y)\n",
+    "                newState.venoms.add(temp_pos)\n",
+    "                new_pos = change_position(pos_snail, d_snail)\n",
+    "                newState.pos[i] = new_pos\n",
+    "\n",
+    "        return newState\n",
     "    \n",
     "    def __eq__(self, other):\n",
     "        if not isinstance(other, State):\n",
@@ -181,13 +209,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "NjWtPnpxM0KI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "(3,1)   (3,1)\n",
+      "True\n",
+      "True\n",
+      "\n",
+      "mauvais résultat\n"
+     ]
+    }
+   ],
    "source": [
     "def test1():\n",
     "    b = True\n",
@@ -230,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -245,6 +286,41 @@
     "import matplotlib.pyplot as plt\n",
     "import itertools\n",
     "\n",
+    "# THIS FUNCTION HAS BEEN CREATED BY US\n",
+    "def format_states(final_moves, state):\n",
+    "    new_states = []\n",
+    "\n",
+    "    for move in final_moves:\n",
+    "        d = []\n",
+    "        for i in range(len(move)):\n",
+    "            d.append(move[i][0])\n",
+    "        fake_state = copy.deepcopy(state)\n",
+    "        new_states.append(fake_state.move(d))\n",
+    "    return new_states\n",
+    "\n",
+    "\n",
+    "# THIS FUNCTION HAS BEEN CREATED BY US\n",
+    "def prepare_string(index, count, state):\n",
+    "    alphabet = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T',\n",
+    "                'U', 'V', 'W', 'X', 'Y', 'Z']\n",
+    "    if state.d[index] == 0:\n",
+    "        direction = \"le centre\"\n",
+    "    elif state.d[index] == 1:\n",
+    "        direction = \"le haut\"\n",
+    "    elif state.d[index] == 2:\n",
+    "        direction = \"la droite\"\n",
+    "    elif state.d[index] == 3:\n",
+    "        direction = \"le bas\"\n",
+    "    else:\n",
+    "        direction = \"la gauche\"\n",
+    "\n",
+    "    if index == len(state.d) - 1:\n",
+    "        punctuation = '.'\n",
+    "    else:\n",
+    "        punctuation = ', '\n",
+    "\n",
+    "    return \"Escargot {0} vers {1}{2}\".format(alphabet[count], direction, punctuation)\n",
+    "\n",
     "class Labyrinth:\n",
     "    \n",
     "    def __init__(self, lines, columns ,exits, walls):\n",
@@ -258,21 +334,102 @@
     "    \"\"\" est il final? \"\"\"\n",
     "    def success(self, state):\n",
     "        # TODO\n",
+    "        if state.prev is not None:\n",
+    "            count = 0\n",
+    "            for i in range(len(state.d)):\n",
+    "                if state.pos[i] == self.exits[i]:\n",
+    "                    count += 1\n",
+    "\n",
+    "            return count == len(state.d)\n",
+    "\n",
     "        return False\n",
     "\n",
     "    def init_positions(self, state):\n",
     "        self.free_pos = np.ones((self.nb_lines, self.nb_columns), dtype=bool)\n",
     "        # TODO\n",
+    "        for wall in self.walls:\n",
+    "            self.free_pos[wall.x, wall.y] = False\n",
+    "\n",
+    "        for snail in state.pos:\n",
+    "            self.free_pos[snail.x, snail.y] = False\n",
+    "\n",
+    "        for venom in state.venoms:\n",
+    "            self.free_pos[venom[0], venom[1]] = False\n",
     "    \n",
+    "    # THIS FUNCTION HAS BEEN CREATED BY US\n",
+    "    def check_if_move_in_grid(self, possible_move):\n",
+    "\n",
+    "        # check for y\n",
+    "        left_min = possible_move.y < 0\n",
+    "        right_max = possible_move.y > (self.nb_columns - 1)\n",
+    "\n",
+    "        # check for x\n",
+    "        down_max = possible_move.x > (self.nb_lines - 1)\n",
+    "        up_min = possible_move.x < 0\n",
+    "\n",
+    "        return not (left_min or right_max or down_max or up_min)\n",
+    "\n",
+    "    # THIS FUNCTION HAS BEEN CREATED BY US\n",
+    "    def calculate_moves(self, possible_move, d, other_exits, moves):\n",
+    "        if self.check_if_move_in_grid(possible_move):\n",
+    "            if self.free_pos[possible_move.x, possible_move.y] and possible_move not in other_exits:\n",
+    "                moves.append((d, possible_move))\n",
+    "                \n",
     "    def possible_moves_snail(self, snail_position, exit_position, other_exits):\n",
     "        moves = []\n",
     "        # TODO    \n",
+    "        if snail_position == exit_position:\n",
+    "            moves.append((0, snail_position))\n",
+    "        else:\n",
+    "\n",
+    "            movement1 = copy.deepcopy(snail_position)\n",
+    "            movement1.x -= 1\n",
+    "            self.calculate_moves(movement1, 1, other_exits, moves)\n",
+    "\n",
+    "            movement2 = copy.deepcopy(snail_position)\n",
+    "            movement2.y += 1\n",
+    "            self.calculate_moves(movement2, 2, other_exits, moves)\n",
+    "\n",
+    "            movement3 = copy.deepcopy(snail_position)\n",
+    "            movement3.x += 1\n",
+    "            self.calculate_moves(movement3, 3, other_exits, moves)\n",
+    "\n",
+    "            movement4 = copy.deepcopy(snail_position)\n",
+    "            movement4.y -= 1\n",
+    "            self.calculate_moves(movement4, 4, other_exits, moves)\n",
+    "\n",
+    "            moves.append((0, snail_position))\n",
+    "\n",
     "        return moves\n",
     "\n",
     "    def possible_moves(self, state):\n",
     "        self.init_positions(state)\n",
     "        new_states = []\n",
     "        # TODO\n",
+    "        snail_moves = []\n",
+    "        for i in range(len(state.pos)):\n",
+    "            other_exits = copy.deepcopy(self.exits)\n",
+    "            other_exits.pop(i)\n",
+    "            snail_moves.append(self.possible_moves_snail(state.pos[i], self.exits[i], other_exits))\n",
+    "\n",
+    "        possible_moves = list(itertools.product(*snail_moves))\n",
+    "        final_moves = copy.deepcopy(possible_moves)\n",
+    "        for move in possible_moves:\n",
+    "            count = 0\n",
+    "            positions = []\n",
+    "            for i in range(len(move)):\n",
+    "                if move[i][1] in positions:\n",
+    "                    final_moves.remove(move)\n",
+    "                    break\n",
+    "                else:\n",
+    "                    positions.append(move[i][1])\n",
+    "                if move[i][1] == state.pos[i]:\n",
+    "                    count += 1\n",
+    "            if count == len(state.pos):\n",
+    "                final_moves.remove(move)\n",
+    "\n",
+    "        new_states = format_states(final_moves, state)\n",
+    "\n",
     "        return new_states\n",
     "\n",
     "    def solve(self, state):\n",
@@ -281,7 +438,17 @@
     "        to_visit.add(state)\n",
     "        # TODO\n",
     "\n",
-    "        return None\n",
+    "        while fifo:\n",
+    "            s = copy.deepcopy(fifo.popleft())\n",
+    "            if not self.success(s):\n",
+    "                next_states = self.possible_moves(s)\n",
+    "                for next in next_states:\n",
+    "                    if next not in to_visit:\n",
+    "                        fifo.append(next)\n",
+    "                        to_visit.add(next)\n",
+    "            else:\n",
+    "                break\n",
+    "        return s\n",
     "        \n",
     "\n",
     "    \"\"\"\n",
@@ -308,7 +475,21 @@
     "                    \n",
     "    def print_solution(self, state):\n",
     "        # TODO\n",
-    "        return 0\n",
+    "        previous = state.prev\n",
+    "        path_states = deque([state])\n",
+    "\n",
+    "        while previous.prev is not None:\n",
+    "            path_states.appendleft(previous)\n",
+    "            previous = copy.deepcopy(previous.prev)\n",
+    "        index = 0\n",
+    "        for s in path_states:\n",
+    "            index += 1\n",
+    "            count = 0\n",
+    "            move_string = \"{0}. \".format(index)\n",
+    "            for i in range(len(s.d)):\n",
+    "                move_string += prepare_string(i, count, s)\n",
+    "                count += 1\n",
+    "            print(move_string)\n",
     "\n",
     "    def print_labyrinth(self, state, show_all=True):\n",
     "\n",
@@ -402,13 +583,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "nsXQo3n8UoBo"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "\n",
+      "résultat correct\n"
+     ]
+    }
+   ],
    "source": [
     "def test2():\n",
     "    b = True\n",
@@ -464,13 +657,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "w3w-wpHQq5M-"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False  True  True False  True  True  True]\n",
+      " [ True  True  True False  True  True  True]\n",
+      " [ True  True False False False  True  True]\n",
+      " [False  True  True  True  True  True  True]\n",
+      " [ True  True  True  True  True  True  True]]\n",
+      "\n",
+      " résultat correct \n",
+      "\n",
+      "[[False False False False  True  True  True]\n",
+      " [False False False False  True  True  True]\n",
+      " [False False False False False  True  True]\n",
+      " [False False  True  True  True  True  True]\n",
+      " [ True  True  True  True  True  True  True]]\n",
+      "\n",
+      " résultat correct \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def test3():\n",
     "    lb = Labyrinth(5, 7,\n",
@@ -532,13 +748,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "WUZ0t78cq9-K"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, (0,1)), (4, (1,0)), (0, (1,1))]\n",
+      "[(2, (2,2)), (3, (3,1)), (4, (2,0)), (0, (2,1))]\n",
+      "[(1, (0,3)), (0, (1,3))]\n",
+      "11\n",
+      "19\n",
+      "35\n",
+      "\n",
+      " résultat correct \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def test4():\n",
     "    b = True\n",
@@ -630,13 +862,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "TtrXDSaZf5c5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.33 s, sys: 6.76 ms, total: 1.33 s\n",
+      "Wall time: 1.38 s\n",
+      "1. Escargot A vers la gauche, Escargot B vers la droite, Escargot C vers le haut.\n",
+      "2. Escargot A vers le bas, Escargot B vers le haut, Escargot C vers la gauche.\n",
+      "3. Escargot A vers le bas, Escargot B vers le centre, Escargot C vers la gauche.\n",
+      "4. Escargot A vers la droite, Escargot B vers le centre, Escargot C vers la gauche.\n",
+      "5. Escargot A vers la droite, Escargot B vers le centre, Escargot C vers le centre.\n",
+      "6. Escargot A vers la droite, Escargot B vers le centre, Escargot C vers le centre.\n",
+      "7. Escargot A vers le haut, Escargot B vers le centre, Escargot C vers le centre.\n"
+     ]
+    }
+   ],
    "source": [
     "def solve7():\n",
     "    lb = Labyrinth(4, 4,\n",
@@ -674,7 +922,27 @@
     "colab_type": "code",
     "id": "Szg8Jbb0grcg"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 14s, sys: 287 ms, total: 1min 14s\n",
+      "Wall time: 1min 15s\n",
+      "1. Escargot A vers le haut, Escargot B vers la droite.\n",
+      "2. Escargot A vers le haut, Escargot B vers le haut.\n",
+      "3. Escargot A vers la droite, Escargot B vers le haut.\n",
+      "4. Escargot A vers la droite, Escargot B vers la droite.\n",
+      "5. Escargot A vers la droite, Escargot B vers la droite.\n",
+      "6. Escargot A vers la droite, Escargot B vers le centre.\n",
+      "7. Escargot A vers le bas, Escargot B vers le centre.\n",
+      "8. Escargot A vers le bas, Escargot B vers le centre.\n",
+      "9. Escargot A vers le bas, Escargot B vers le centre.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def solve9():\n",
     "    lb = Labyrinth(5, 5,\n",
@@ -796,5 +1064,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
